--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <title>Pixel Art Maker</title>
     <meta charset="utf-8">
     <title></title>
   </head>
