--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <title>Pixel Art Maker</title>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8">
     <title></title>
   </head>
