--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   <body>
     <h1>Pixel Art Maker</h1>
     <h2>Choose Grid Size</h2>
+    <form>
+      Grid Height:
+      <input type="number" min="1" max="25" value="1">
+      Grid Width:
+      <input type="number" min="1" max="25" value="1">
+      <input type="submit">
+    </form>
 
   </body>
 </html>
