--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <input type="number" min="1" max="25" value="1">
       <input type="submit">
     </form>
+    <h2>Pick A Color</h2>
 
   </body>
 </html>
