Links JavaScript file

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     <input type="color">
     <h2>Design Canvas</h2>
     <table></table>
-
+    <script src="designs.js"></script>
   </body>
 </html>
