--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <title>Pixel Art Maker</title>
+    <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8">
     <title></title>
